--- a/Assignment_01.ipynb
+++ b/Assignment_01.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Name:** Lakshita  \n",
+    "**Assignment Number:** 01 \n",
+    "**Enrollment No.:** 23115072\n",
+    "**Sub-batch:** EE3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
